# skylark-core

./: .dockerignore  .gitignore  .stylish-haskell.yaml  .travis.yml  Dockerfile  Makefile  README.md  build.sh  deps.sh  lint.sh  skylark-core.cabal  stack-travis.yaml  stack.yaml  stylish.sh  test.sh
.travis/: stack.yaml
conf/: dev.yaml  info.yaml  info_testing.yaml  testing.yaml
fixtures/json/: sample_record.json
hooks/: pre-commit
main/: Main.hs
src/: Lib.hs
src/Network/Skylark/: Core.hs
src/Network/Skylark/Core/: Async.hs  Conf.hs  Constants.hs  DynamoDB.hs  Lens.hs  MVars.hs  Maps.hs  Prelude.hs  Receipts.hs  Retries.hs  Setup.hs  TChans.hs  TH.hs  Time.hs  Timers.hs  Trace.hs  Types.hs  Update.hs  Updates.hs  Upserts.hs
src/Network/Skylark/Core/Data/: JSON.hs  Text.hs
src/Network/Skylark/Core/Lens/: TH.hs
src/Network/Skylark/Core/Providers/: StatGrab.hs
test/: Test.hs
test/Test/Network/Skylark/Core/: Conf.hs  DynamoDB.hs  Metrics.hs  Retries.hs  Setup.hs  TChans.hs  Test.hs  Time.hs  Types.hs
