name:                  skylark-core
version:               0.1.0
synopsis:              Skylark Core Support
homepage:              http://github.com/swift-nav/skylark-core
license:               BSD3
license-file:          LICENSE
author:                Swift Navigation Inc.
maintainer:            Mark Fine <dev@swiftnav.com>
copyright:             2015 Mark Fine
category:              Web
build-type:            Simple
cabal-version:         >= 1.10
data-files:            conf/dev.yaml
                     , conf/testing.yaml

library
  hs-source-dirs:      src
  exposed-modules:     Network.Skylark.Core
                     , Network.Skylark.Core.Conf
                     , Network.Skylark.Core.Constants
                     , Network.Skylark.Core.Maps
                     , Network.Skylark.Core.Setup
                     , Network.Skylark.Core.Timers
                     , Network.Skylark.Core.Trace
                     , Network.Skylark.Core.Types
                     , Network.Skylark.Core.Upserts
  other-modules:       Network.Skylark.Core.Prelude
  ghc-options:         -Wall
  build-depends:       aeson
                     , amazonka
                     , amazonka-dynamodb
                     , base >= 4.7 && < 5
                     , basic-prelude
                     , data-default
                     , envy
                     , exceptions
                     , fast-logger
                     , formatting
                     , lens
                     , monad-control
                     , monad-logger
                     , MonadRandom
                     , mtl
                     , optparse-applicative
                     , resourcet
                     , stm
                     , text
                     , time
                     , transformers-base
                     , unordered-containers
                     , uuid
                     , warp
                     , yaml
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Paths_skylark_core
                     , Test.Network.Skylark.Core.Conf
                     , Test.Network.Skylark.Core.Test
  build-depends:       base
                     , basic-prelude
                     , data-default
                     , envy
                     , lens
                     , monad-logger
                     , optparse-applicative
                     , QuickCheck
                     , skylark-core
                     , tasty
                     , tasty-hunit
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/swift-nav/skylark-core
