name:                  skylark-core
version:               0.1.0
synopsis:              Skylark Core Support
homepage:              http://github.com/swift-nav/skylark-core
license:               BSD3
license-file:          LICENSE
author:                Swift Navigation Inc.
maintainer:            Mark Fine <dev@swiftnav.com>
copyright:             2015 Mark Fine
category:              Web
build-type:            Simple
cabal-version:         >= 1.10
data-files:            conf/dev.yaml
                     , conf/info.yaml
                     , conf/testing.yaml

library
  hs-source-dirs:      src
  exposed-modules:     Network.Skylark.Core
                     , Network.Skylark.Core.Async
                     , Network.Skylark.Core.Conf
                     , Network.Skylark.Core.Constants
                     , Network.Skylark.Core.Maps
                     , Network.Skylark.Core.Prelude
                     , Network.Skylark.Core.Providers.StatGrab
                     , Network.Skylark.Core.Retries
                     , Network.Skylark.Core.Setup
                     , Network.Skylark.Core.Timers
                     , Network.Skylark.Core.Trace
                     , Network.Skylark.Core.Types
                     , Network.Skylark.Core.Upserts
  ghc-options:         -Wall
  build-depends:       MonadRandom
                     , aeson
                     , amazonka
                     , amazonka-dynamodb
                     , async
                     , base >= 4.7 && < 5
                     , basic-prelude
                     , case-insensitive
                     , data-default
                     , envy
                     , either
                     , exceptions
                     , fast-logger
                     , formatting
                     , http-types
                     , lens
                     , monad-control
                     , monad-logger
                     , mtl
                     , optparse-applicative
                     , resourcet
                     , stm
                     , statgrab
                     , text
                     , time
                     , transformers-base
                     , unordered-containers
                     , uuid
                     , wai
                     , warp
                     , yaml
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Paths_skylark_core
                     , Test.Network.Skylark.Core.Conf
                     , Test.Network.Skylark.Core.Metrics
                     , Test.Network.Skylark.Core.Retries
                     , Test.Network.Skylark.Core.Setup
                     , Test.Network.Skylark.Core.Test
  build-depends:       base
                     , basic-prelude
                     , data-default
                     , envy
                     , exceptions
                     , lens
                     , monad-logger
                     , optparse-applicative
                     , QuickCheck
                     , quickcheck-instances
                     , skylark-core
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards

source-repository head
  type:     git
  location: https://github.com/swift-nav/skylark-core
